[package]
name = "rust-web3-utils"
version = "0.1.0"
edition = "2021"

# Define multiple binaries
[[bin]]
name = "latency"
path = "src/main.rs"

[[bin]]
name = "spam"
path = "src/spam.rs"

[[bin]]
name = "sub"
path = "src/sub.rs"

[[bin]]
name = "dump"
path = "src/dump.rs"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
